--- a/course3/week4/gensim.ipynb
+++ b/course3/week4/gensim.ipynb
@@ -18,18 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\gensim\\utils.py:855: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
    "source": [
     "from gensim import corpora, models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -42,11 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2min 47s\n"
+     ]
+    }
+   ],
    "source": [
     "# обучение модель\n",
     "%time ldamodel = models.ldamodel.LdaModel(data, id2word=dictionary, num_topics=5, passes=20, alpha=1.25, eta=1.25)"
@@ -54,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -78,37 +95,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0 : 0.004*\"b'person'\" + 0.002*\"b'exhibit'\" + 0.002*\"b'wait'\" + 0.001*\"b'peter'\" + 0.001*\"b'sagal'\" + 0.001*\"b'error'\" + 0.001*\"b'han'\" + 0.001*\"b'dont'\" + 0.001*\"b'text'\" + 0.001*\"b'gliese'\"\n",
+      "Topic 1 : 0.001*\"b'human'\" + 0.001*\"b'wave'\" + 0.001*\"b'spirit'\" + 0.001*\"b'man'\" + 0.001*\"b'degree'\" + 0.001*\"b'water'\" + 0.001*\"b'cat'\" + 0.001*\"b'lake'\" + 0.001*\"b'boomerang'\" + 0.001*\"b'turtle'\"\n",
+      "Topic 2 : 0.027*\"b'man'\" + 0.012*\"b'text'\" + 0.011*\"b'woman'\" + 0.010*\"b'guy'\" + 0.010*\"b'title'\" + 0.006*\"b'hat'\" + 0.005*\"b'one'\" + 0.005*\"b'just'\" + 0.004*\"b'girl'\" + 0.004*\"b'computer'\"\n",
+      "Topic 3 : 0.002*\"b'link'\" + 0.001*\"b'goggles'\" + 0.001*\"b'jelly'\" + 0.001*\"b'bean'\" + 0.001*\"b'acne'\" + 0.001*\"b'found'\" + 0.001*\"b'005'\" + 0.001*\"b'egg'\" + 0.001*\"b'base'\" + 0.001*\"b'hit'\"\n",
+      "Topic 4 : 0.022*\"b'person'\" + 0.006*\"b'text'\" + 0.006*\"b'title'\" + 0.005*\"b'one'\" + 0.004*\"b'girl'\" + 0.004*\"b'two'\" + 0.003*\"b'boy'\" + 0.003*\"b'panel'\" + 0.003*\"b'just'\" + 0.003*\"b'narrator'\"\n"
+     ]
+    }
+   ],
    "source": [
     "# выводим топы слов\n",
     "for t, top_words in ldamodel.print_topics(num_topics=10, num_words=10):\n",
-    "    print \"Topic\", t, \":\", top_words"
+    "    print (\"Topic\", t, \":\", top_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360.815744994\n"
+     ]
+    }
+   ],
    "source": [
     "# Вычисляем логарифм перплексии и немного преобразуем, чтобы привести к общепринятому виду\n",
     "perplexity = ldamodel.log_perplexity(list(data))\n",
-    "print 2**(-perplexity)"
+    "print (2**(-perplexity))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "360.81574502503668"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "perp = ldamodel.bound(data)\n",
     "2**(-perp/float(87409))"
@@ -116,11 +164,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-f09218b8da97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m# Добавление в модель новых документов, содержащихся в новом корупсе data2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mldamodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpasses\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Добавление в модель новых документов, содержащихся в новом корупсе data2\n",
     "ldamodel.update(data2, passes=10)"
@@ -147,25 +207,34 @@
     "\n",
     "![comic2](http://imgs.xkcd.com/comics/the_problem_with_wikipedia.png) | ![comic3](http://imgs.xkcd.com/comics/mystery_news.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
