--- a/course4/week4/task2.ipynb
+++ b/course4/week4/task2.ipynb
@@ -606,25 +606,7 @@
     "    p2 = float(sum(sample2)) / len(sample2)\n",
     "    left_boundary = (p1 - p2) - z * np.sqrt(p1 * (1 - p1)/ len(sample1) + p2 * (1 - p2)/ len(sample2))\n",
     "    right_boundary = (p1 - p2) + z * np.sqrt(p1 * (1 - p1)/ len(sample1) + p2 * (1 - p2)/ len(sample2))\n",
-    "    return (left_boundary, right_boundary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "confidence interval: [0.033635, 0.060548]\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return (left_boundary, right_boundary)\n",
     "print (\"confidence interval: [%f, %f]\" % proportions_diff_confint_ind(df_default0, df_default1))"
    ]
   },
@@ -2741,7 +2723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2755,7 +2737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
