--- a/course5/week4/Task - Задание по программированию.ipynb
+++ b/course5/week4/Task - Задание по программированию.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
        "9                                76,77,78       NaN"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
        "4        11      0.0     6734.0   53509.5"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -318,38 +318,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 457,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{5494}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.2, 1.0)"
-      ]
-     },
-     "execution_count": 457,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "testdf[testdf.v=='5494']\n",
-    "view=testdf.loc[668]['v']\n",
-    "buy=testdf.loc[668]['b']\n",
-    "metric(view,buy,5,'view_rank')\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -360,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -421,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -439,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -447,8 +415,8 @@
    "source": [
     "def get_avg_metrics(df):\n",
     "    res=pd.DataFrame(columns=['view_rank','buy_rank'])\n",
-    "    for metric in ['p','r']:\n",
-    "        for k in [1,5]:\n",
+    "    for k in [1,5]:\n",
+    "        for metric in ['r','p']:\n",
     "            for alg in ['view_rank','buy_rank']:\n",
     "                res.loc[metric+str(k),alg]=round(df[metric+str(k)+alg].mean(skipna=True),2)\n",
     "    return res"
@@ -456,124 +424,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>view_rank</th>\n",
-       "      <th>buy_rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>p1</th>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>p5</th>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r1</th>\n",
-       "      <td>0.44</td>\n",
-       "      <td>0.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r5</th>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.93</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   view_rank buy_rank\n",
-       "p1      0.51     0.79\n",
-       "p5      0.21     0.25\n",
-       "r1      0.44     0.68\n",
-       "r5      0.82     0.93"
-      ]
-     },
-     "execution_count": 465,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_avg_metrics(traindf)"
+    "t1=get_avg_metrics(traindf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>view_rank</th>\n",
-       "      <th>buy_rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>p1</th>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>p5</th>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r1</th>\n",
-       "      <td>0.41</td>\n",
-       "      <td>0.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r5</th>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.79</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   view_rank buy_rank\n",
-       "p1      0.48     0.48\n",
-       "p5       0.2      0.2\n",
-       "r1      0.41     0.41\n",
-       "r5       0.8     0.79"
-      ]
-     },
-     "execution_count": 467,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_avg_metrics(testdf)"
+    "t2=get_avg_metrics(testdf)"
    ]
   },
   {
@@ -581,6 +449,94 @@
    "metadata": {},
    "source": [
     "Посмотрите, как они соотносятся друг с другом. Где качество получилось выше? Значимо ли это различие? Обратите внимание на различие качества на обучающей и тестовой выборке в случае рекомендаций по частотам покупки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.44, 0.51, 0.82, 0.21], dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t1['view_rank']).as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.41, 0.48, 0.8, 0.2], dtype=object)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t2['view_rank']).as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.68, 0.79, 0.93, 0.25], dtype=object)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t1['buy_rank']).as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.41, 0.48, 0.79, 0.2], dtype=object)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(t2['buy_rank']).as_matrix()"
    ]
   },
   {
