--- a/course4/week4/task1.ipynb
+++ b/course4/week4/task1.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание по программированию: Дифференциально экспрессированные гены"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -223,12 +230,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1"
+    "## Task 1\n",
+    "Часть 1: применение t-критерия Стьюдента\n",
+    "\n",
+    "В первой части вам нужно будет применить критерий Стьюдента для проверки гипотезы о равенстве средних в двух независимых выборках. Применить критерий для каждого гена нужно будет дважды:\n",
+    "\n",
+    "* для групп normal (control) и early neoplasia (treatment)\n",
+    "* для групп early neoplasia (control) и cancer (treatment)\n",
+    "\n",
+    "В качестве ответа в этой части задания необходимо указать количество статистически значимых отличий, которые вы нашли с помощью t-критерия Стьюдента, то есть число генов, у которых p-value этого теста оказался меньше, чем уровень значимости."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +324,7 @@
        "KLHL17        0.049876  0.463292"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -349,24 +364,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2"
+    "## Task 2\n",
+    "В этой части задания нужно будет применить поправку Холма для получившихся двух наборов достигаемых уровней значимости из предыдущей части. Обратите внимание, что поскольку вы будете делать поправку для каждого из двух наборов p-value отдельно, то проблема, связанная с множественной проверкой останется.\n",
+    "\n",
+    "Для того, чтобы ее устранить, достаточно воспользоваться поправкой Бонферрони, то есть использовать уровень значимости 0.05 / 2 вместо 0.05 для дальнейшего уточнения значений p-value c помощью метода Холма.\n",
+    "\n",
+    "В качестве ответа к этому заданию требуется ввести количество значимых отличий в каждой группе после того, как произведена коррекция Холма-Бонферрони. Причем это число нужно ввести с учетом практической значимости: посчитайте для каждого значимого изменения fold change и выпишите в ответ число таких значимых изменений, абсолютное значение fold change которых больше, чем 1.5.\n",
+    "\n",
+    "Обратите внимание, что\n",
+    "\n",
+    "* применять поправку на множественную проверку нужно ко всем значениям достигаемых уровней значимости, а не только для тех, которые меньше значения уровня доверия.\n",
+    "* при использовании поправки на уровне значимости 0.025 меняются значения достигаемого уровня значимости, но не меняется значение уровня доверия (то есть для отбора значимых изменений скорректированные значения уровня значимости нужно сравнивать с порогом 0.025, а не 0.05)!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.025"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15748"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pvalue.pvalue1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rejected1,p_cor,a1,a2 = smm.multipletests(pvals=pvalue.pvalue1,alpha=a/2,method='holm')\n",
-    "rejected2,p_cor,a1,a2 = smm.multipletests(pvals=pvalue.pvalue2,alpha=a/2,method='holm')"
+    "rejected1,p_cor1,a1,a2 = smm.multipletests(pvals=pvalue.pvalue1,alpha=a/2,method='holm')\n",
+    "rejected2,p_cor2,a1,a2 = smm.multipletests(pvals=pvalue.pvalue2,alpha=a/2,method='holm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(p_cor2[p_cor2<a/2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +482,7 @@
        "Name: rejected1, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +506,7 @@
        "Name: rejected2, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -440,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -453,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -474,14 +565,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "task2_qty1= 259\n",
-      "task2_qty2= 994\n"
+      "task2_qty1= 2\n",
+      "task2_qty2= 77\n"
      ]
     }
    ],
    "source": [
-    "print (\"task2_qty1=\",len(pvalue[(pvalue['rejected1']==False)&(abs(pvalue['fc1'])>1.5)]))\n",
-    "print (\"task2_qty2=\",len(pvalue[(pvalue['rejected2']==False)&(abs(pvalue['fc2'])>1.5)]))"
+    "print (\"task2_qty1=\",len(pvalue[(pvalue['rejected1']==True)&(abs(pvalue['fc1'])>1.5)]))\n",
+    "print (\"task2_qty2=\",len(pvalue[(pvalue['rejected2']==True)&(abs(pvalue['fc2'])>1.5)]))"
    ]
   },
   {
@@ -493,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -507,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -536,10 +627,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LOC643837</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.690766</td>\n",
+       "      <td>0.413735</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>2.681277</td>\n",
        "      <td>2.510894</td>\n",
        "      <td>2.186060</td>\n",
@@ -1395,7 +1486,7 @@
       ],
       "text/plain": [
        "               pvalue1   pvalue2 rejected1 rejected2      n_mean      e_mean  \\\n",
-       "LOC643837     1.000000  1.000000      True      True    2.681277    2.510894   \n",
+       "LOC643837     0.690766  0.413735     False     False    2.681277    2.510894   \n",
        "LOC100130417  0.000032  0.653429     False     False    4.368497    8.721781   \n",
        "SAMD11        0.060273  0.079556     False     False   15.159566   18.531325   \n",
        "NOC2L         0.826429  0.287581     False     False   15.374351   15.071854   \n",
@@ -1523,7 +1614,7 @@
        "[15748 rows x 11 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -1543,14 +1634,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "task3_qty1= 257\n",
-      "task3_qty2= 547\n"
+      "task3_qty1= 4\n",
+      "task3_qty2= 524\n"
      ]
     }
    ],
    "source": [
-    "print (\"task3_qty1=\",len(pvalue[(pvalue['fdr_bh_rejected1']==False)&(abs(pvalue['fc1'])>1.5)]))\n",
-    "print (\"task3_qty2=\",len(pvalue[(pvalue['fdr_bh_rejected2']==False)&(abs(pvalue['fc2'])>1.5)]))"
+    "print (\"task3_qty1=\",len(pvalue[(pvalue['fdr_bh_rejected1']==True)&(abs(pvalue['fc1'])>1.5)]))\n",
+    "print (\"task3_qty2=\",len(pvalue[(pvalue['fdr_bh_rejected2']==True)&(abs(pvalue['fc2'])>1.5)]))"
    ]
   },
   {
@@ -1565,7 +1656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1579,7 +1670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
