--- a/course5/week4/Task - Задание по программированию.ipynb
+++ b/course5/week4/Task - Задание по программированию.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
        "9                                76,77,78       NaN"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
        "4        11      0.0     6734.0   53509.5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.3333333333333333)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric(traindf.loc[7,'v'],traindf.loc[7,'b'],1,'view_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59    61559.5\n",
+      "60    39021.5\n",
+      "61    39021.5\n",
+      "62    61559.5\n",
+      "63    14211.5\n",
+      "64    28082.5\n",
+      "65    39021.5\n",
+      "66    39021.5\n",
+      "67    39021.5\n",
+      "68    39021.5\n",
+      "Name: view_rank, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "view_ids=traindf.loc[7,'v']\n",
+    "view_ids=view_ids.split(',')\n",
+    "view_ids=list(map(int,view_ids))\n",
+    "#get_recom_id(view_ids,5,'view_rank')\n",
+    "a=rate_df.loc[{64, 65, 66, 67, 68, 59, 60, 61, 62, 63},'view_rank']\n",
+    "print (a.sort_index())\n",
+    "#print (a.sort_index().sort_values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +371,7 @@
     "    # минимум из К и количеством товаров\n",
     "    first=min(k,len(view_ids))\n",
     "    # возвращаем топ лучших ИД \n",
-    "    return list(rate_df.loc[view,alg].sort_values(kind='mergesort')[0:first].index)"
+    "    return list(rate_df.loc[view,alg].sort_values(kind='heapsort')[0:first].index)"
    ]
   },
   {
@@ -328,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -389,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -424,18 +481,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>view_rank</th>\n",
+       "      <th>buy_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>r1</th>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p1</th>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r5</th>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p5</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   view_rank buy_rank\n",
+       "r1      0.44     0.66\n",
+       "p1      0.51     0.77\n",
+       "r5      0.82     0.93\n",
+       "p5      0.21     0.25"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t1=get_avg_metrics(traindf)"
+    "t1=get_avg_metrics(traindf)\n",
+    "t1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -453,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -464,18 +572,19 @@
        "array([0.44, 0.51, 0.82, 0.21], dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(t1['view_rank']).as_matrix()"
+    "(t1['view_rank']).as_matrix()\n",
+    "# 0.44 0.51 0.82 0.21"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -486,18 +595,19 @@
        "array([0.41, 0.48, 0.8, 0.2], dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(t2['view_rank']).as_matrix()"
+    "(t2['view_rank']).as_matrix()\n",
+    "# 0.41 0.48 0.8 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -505,21 +615,22 @@
     {
      "data": {
       "text/plain": [
-       "array([0.68, 0.79, 0.93, 0.25], dtype=object)"
+       "array([0.66, 0.77, 0.93, 0.25], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(t1['buy_rank']).as_matrix()"
+    "(t1['buy_rank']).as_matrix()\n",
+    "# 0.66 0.77 0.93 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -527,16 +638,19 @@
     {
      "data": {
       "text/plain": [
-       "array([0.41, 0.48, 0.79, 0.2], dtype=object)"
+       "array([0.42, 0.48, 0.79, 0.2], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(t2['buy_rank']).as_matrix()"
+    "(t2['buy_rank']).as_matrix()\n",
+    "#merge [0.42, 0.48, 0.79, 0.2]\n",
+    "#quic [0.42, 0.49, 0.79, 0.2]\n",
+    "#heap 0.41, 0.48, 0.79, 0.2"
    ]
   },
   {
@@ -548,6 +662,15 @@
     "* На тесте качество для рекомендации по популярности незначительно отличается от обучения\n",
     "* На тесте качество для рекомендации по покупук сильно хуже обучения"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
